; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_lazy.c_kperf_lazy_set_wait_action.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_lazy.c_kperf_lazy_set_wait_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kperf_lazy_wait_action = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kperf_lazy_set_wait_action(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i32 (...) @kperf_action_get_count()
  %9 = icmp ugt i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6, %1
  store i32 1, i32* %2, align 4
  br label %14

11:                                               ; preds = %6
  %12 = load i32, i32* %3, align 4
  store i32 %12, i32* @kperf_lazy_wait_action, align 4
  %13 = call i32 (...) @kperf_on_cpu_update()
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @kperf_action_get_count(...) #1

declare dso_local i32 @kperf_on_cpu_update(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
